mise à jour sass

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <title>OhMyFood</title>
-    <link rel="stylesheet" href="Style/styleOff.css">
+    <link rel="stylesheet" href="Style/style.css">
     
 <header>
     <div class="fleche"></div>
