--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="Style/style.css">
 
 <body>
+    <div class="divloader">
+        <div class="loader"></div>
+    </div>
 <header>
     <div class="fleche"></div>
     <div class="header__title"><h1>ohmyfood</h1></div>
@@ -30,7 +33,7 @@
     <section class="presentation">
         <div class="reserver">Réservez le menu qui vous convient</div>
         <div class="decouvrez"><p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p></div>
-        <button>Explorer nos restaurants</button>
+        <a href="#ancre"><button>Explorer nos restaurants</button></a>
     </section>
 
     <section class="fonctionnement">
@@ -65,9 +68,9 @@
         <h2 class="section-title">Restaurants</h2>
             
         
-        <div class="restaurants-cards">
+        <div class="restaurants-cards" id="ancre">
             <div class="ligne1desktop">
-            <article class="card">
+            <article class="card"><a class="rc" href="./palette.html">
                 <div class="card-img"><img class="card-img" src="./restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                     alt="Assiette de crudités fines">
                     <div class="nouveau">Nouveau</div></div>
@@ -81,9 +84,9 @@
                         <i class="far coeur fa-heart unchecked"></i>
                         <i class="fas coeur2 fa-heart checked"></i>
                     </label>
-                </div>
+                </div></a>
             </article>
-            <article class="card">
+            <article class="card"><a class="rc" href="./note.html">
                 <div class="card-img"><img class="card-img" src="./restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit">
                     <div class="nouveau">Nouveau</div></div>
@@ -97,11 +100,11 @@
                         <i class="far coeur fa-heart unchecked"></i>
                         <i class="fas coeur2 fa-heart checked"></i>
                     </label>   
-                </div>
+                </div></a>
             </article></div>
             <div class="ligne2desktop">
-            <article class="card">
-                <img class="card-img" src="./restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+            <article class="card"><a class="rc" href="./français.html">
+                <img class="card-img" src="./restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit">
                 <div class="card-content">
                     <div class="card-txt">
@@ -113,10 +116,10 @@
                         <i class="far coeur fa-heart unchecked"></i>
                         <i class="fas coeur2 fa-heart checked"></i>
                     </label>
-                </div>
+                </div></a>
             </article>
-            <article class="card">
-                <img class="card-img" src="./restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+            <article class="card"><a class="rc" href="./delice.html">
+                <img class="card-img" src="./restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit">
                 <div class="card-content">
                     <div class="card-txt">
@@ -128,7 +131,7 @@
                         <i class="far coeur fa-heart unchecked"></i>
                         <i class="fas coeur2 fa-heart checked"></i>
                     </label>
-                </div>
+                </div></a>
             </article></div>
         </div>
     </section>
