mise à jour soutenance

--- a/delice.html
+++ b/delice.html
@@ -169,7 +169,7 @@
         </div>
     </div>
     </section>
-    <div class="commander"><button>Commander</button></div>
+    <div class="commander"><button class="button">Commander</button></div>
 </main>
 
 <footer class="footer-pal">
@@ -178,7 +178,7 @@
         <li><div class="utensils"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></div></li>
         <li><div class="handshake"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a></div></li>
         <li><a href="#">Mentions légales</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="mailto:adresse-email@exemple.com">Contact</a></li>
     </ul>
 
 </footer>
