mise à jour coeur

--- a/palette.html
+++ b/palette.html
@@ -35,12 +35,11 @@
     <section class="centre">
     <div class="restaurants">
         <div class="row"><h2 class="section-title header__title font-weight400">La palette du goût</h2>
-            <label class="custom-checkbox">
-                <input type="checkbox" />
-                <i class="far coeur ajust fa-heart unchecked"></i>
-                <i class="fas coeur2 ajust2 fa-heart checked"></i>
-            </label>
-    </div>
+            <div class="checkboxMenu">
+                <i class="far fa-heart checkboxMenu"></i>
+                <i class="fas fa-heart checkboxMenu"></i>
+            </div>    
+        </div>
 
         <h4 class="margin-bottom font-weight100">ENTRÉES</h4>
         <div class="souligne"></div><br>
