--- a/index.html
+++ b/index.html
@@ -80,15 +80,13 @@
                     <div class="card-txt">
                         <h3 class="card-title">La palette du goût</h3>
                         <p class="card-subtitle">Ménilmontant</p>
-                    </div>
-                    <label class="custom-checkbox">
-                        <input type="checkbox" id="checkbox"/>
-                        <i class="far coeur fa-heart unchecked"></i>
-                        <i class="fas coeur2 fa-heart checked"></i>
-                    </label>
-                    
+                    </div>     
                 </div>
-                </a>
+                                  </a>
+                <div class="checkbox">
+                    <i class="far fa-heart checkbox"></i>
+                    <i class="fas fa-heart checkbox"></i>
+                </div> 
             </article>
             <article class="card"><a class="rc" href="./note.html">
                 <div class="card-img"><img class="card-img" src="./restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
@@ -98,13 +96,12 @@
                     <div class="card-txt">
                         <h3 class="card-title">La note enchanté</h3>
                         <p class="card-subtitle">Charonne</p>
-                    </div>
-                    <label class="custom-checkbox">
-                        <input type="checkbox">
-                        <i class="far coeur fa-heart unchecked"></i>
-                        <i class="fas coeur2 fa-heart checked"></i>
-                    </label>   
+                    </div> 
                 </div></a>
+                <div class="checkbox">
+                    <i class="far fa-heart checkbox"></i>
+                    <i class="fas fa-heart checkbox"></i>
+                </div> 
             </article></div>
             <div class="ligne2desktop">
             <article class="card"><a class="rc" href="./français.html">
@@ -115,12 +112,11 @@
                         <h3 class="card-title">À la française</h3>
                         <p class="card-subtitle">Cité Rouge</p>
                     </div>
-                    <label class="custom-checkbox">
-                        <input type="checkbox">
-                        <i class="far coeur fa-heart unchecked"></i>
-                        <i class="fas coeur2 fa-heart checked"></i>
-                    </label>
                 </div></a>
+                <div class="checkbox">
+                    <i class="far fa-heart checkbox"></i>
+                    <i class="fas fa-heart checkbox"></i>
+                </div> 
             </article>
             <article class="card"><a class="rc" href="./delice.html">
                 <img class="card-img" src="./restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
@@ -130,13 +126,12 @@
                         <h3 class="card-title">Le délice des sens</h3>
                         <p class="card-subtitle">Folie-Méricourt</p>
                     </div>
-                    <label class="custom-checkbox">
-                        <input type="checkbox">
-                        <i class="far coeur fa-heart unchecked"></i>
-                        <i class="fas coeur2 fa-heart checked"></i>
-                    </label>
                 </div></a>
-            </article></div>
+                <div class="checkbox">
+                    <i class="far fa-heart checkbox"></i>
+                    <i class="fas fa-heart checkbox"></i>
+                </div> 
+            </article>
         </div>
     </section>
 </main>
