--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
             <article class="card"><a class="rc" href="./palette.html">
                 <div class="card-img"><img class="card-img" src="./restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                     alt="Assiette de crudités fines">
-                    <div class="nouveau">Nouveau</div></div>
+                    <div class="nouveau">Nouveau</div>
+                </div>
                 <div class="card-content">
                     <div class="card-txt">
                         <h3 class="card-title">La palette du goût</h3>
@@ -91,7 +92,8 @@
             <article class="card"><a class="rc" href="./note.html">
                 <div class="card-img"><img class="card-img" src="./restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                     alt="Image de la chambre d'hôtel montrant un lit">
-                    <div class="nouveau">Nouveau</div></div>
+                    <div class="nouveau">Nouveau</div>
+                </div>
                 <div class="card-content">
                     <div class="card-txt">
                         <h3 class="card-title">La note enchanté</h3>
@@ -102,7 +104,8 @@
                     <i class="far fa-heart checkbox"></i>
                     <i class="fas fa-heart checkbox"></i>
                 </div> 
-            </article></div>
+            </article>
+            </div>
             <div class="ligne2desktop">
             <article class="card"><a class="rc" href="./français.html">
                 <img class="card-img" src="./restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
@@ -132,6 +135,7 @@
                     <i class="fas fa-heart checkbox"></i>
                 </div> 
             </article>
+        </div>
         </div>
     </section>
 </main>
